[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cute-comm"
version = "0.1.0"
description = "NCCL device-initiated API for the CuTe Python DSL"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nvidia-cutlass-dsl>=4.4.2",
    "nvidia-nccl-cu13>=2.29.7",
    "nvidia-cuda-nvcc>=13.2.51",
    "cuda-pathfinder>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
package = true
